# ai_powered_practice_papers_generator

./: mathsy_worksheet_generator.ipynb  pyproject.toml  questions_file.txt
worksheets/: worksheet_1.txt
